# cardioverse-minimal

./: .gitignore  README.md  pyproject.toml
artefacts/genes_linet_20260330_102049/: trained_model.pt
artefacts/reactions_linet_20260330_100639/: trained_model.pt
docs/: ARCHITECTURE.md
notebooks/: 01_reactions_explain.ipynb  01_single_modality_reactions.ipynb  02_genes_explain.ipynb  02_single_modality_genes.ipynb  03_multiview_fusion.ipynb
src/cardioverse/: __init__.py
src/cardioverse/configs/: __init__.py  fusion_config.py  gnn_config.py
src/cardioverse/explanations/: __init__.py  integrated_gradients.py
src/cardioverse/models/: __init__.py  fusion.py  gcn.py  linet.py
src/cardioverse/training/: __init__.py  fusion_trainer.py  gnn_trainer.py
src/cardioverse/utils/: __init__.py  regularization.py
