[project]
name = "cardioverse-minimal"
version = "0.1.0"
description = "Minimal reproducible version of Cardioverse GNN models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.1",
    "torch-geometric==2.7.0",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "captum==0.8.0",
    "tqdm==4.67.1",
    "scipy==1.16.3",
    "networkx==3.6.1",
    "statsmodels==0.14.6",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "jupyter==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cardioverse"]
